--- a/_data/template.yml
+++ b/_data/template.yml
@@ -1,7 +1,7 @@
 # Color settings (hex-codes without the leading hash-tag)
 color:
   primary: 0f0f0f
-  secondary: 1ff7b7  
+  secondary: 1ef7b7
   secondary-dark: 333
   muted: 777
 
