--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: "Write an awesome description for your new site here. You can edit 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
-    url: http://twitter.com/jordanin312
+    url: http://twitter.com/jordanwhitneym
   - title: github
     url: http://github.com/jwbmartin
   - title: instagram
