--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # Site settings
 title: JWM
 email: jordanwhitneymartin@gmail.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+description: portfolio site for jordan whitney martin
 
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
